Fix consistency of footer text color on mobile

--- a/components/LanguageSelector.module.css
+++ b/components/LanguageSelector.module.css
@@ -17,12 +17,14 @@ ul.languages li{
 }
 
 ul.languages li button {
+  color: #222222;
   font-size: 1rem;
   font-weight: 300;
   padding: 0.5rem;
 }
 
 ul.languages li button:hover {
+  color: #000000;
   cursor: pointer;
   text-decoration: underline;
 }
